# GitVersioniser

./: .flake8  .gitignore  .isort.cfg  .markdownlint.json  .mega-linter.yml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  action.yml  asset-manifest.json  entrypoint.sh  index.html  main.py  manifest.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: GitVersioniser.yml  Linters.yml  MarkdownLinter.yml  PythonMegaLinter.yml
docs/: FEATURES.md
docs/example/: GitVersioniser.yml
src/: main.py
src/config/: arguments.py  commit_tag.py  commit_tags.py  config.py  credentials.py  increment.py  increments.py  patterns.py  routines.py
src/domain/repository/: commit.py  commits.py  files.py  git_repository.py  remote.py  tags.py
src/domain/versioniser/: versioniser.py
src/gitversioniser/config/: arguments.py  commit_tag.py  commit_tags.py  config.py  credentials.py  increment.py  increments.py  patterns.py  routines.py
src/helpers/: changelog_category.py  version_bump.py
static/css/: main.03abc610.css  main.03abc610.css.map  main.cf931a46.css  main.cf931a46.css.map
static/js/: main.145fc947.js  main.145fc947.js.map  main.6bcf7488.js  main.6bcf7488.js.map  main.c11dd462.js  main.c11dd462.js.map
test/api/v1/: test_default.py
tests/general/: general_scenario.py  test_compare_versions.py  test_latest_version.py
tests/utils/: pseudo_repo.py  repo_utils.py  temp_directory.py  temp_file.py
tests/v0/: default_scenario_v0.py  test_default.py  test_default_config_values.py
(+314 files in other folders)
