[metadata]
name = gitversioniser
description = Automatic Semantic Versioniser and Change Tracker
author = Marcel Jerzyk
license = BSD 4-Clause
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    gitversioniser
install_requires =
    GitPython>=3
    semver>=2
    rich>=12
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3.0
    mypy>=0.942
    flake8>=4.0
    tox>=3.25

[options.package_data]
gitversioniser = py.typed

[flake8]
max-line-length = 150
